fixed up contact link spacing

--- a/styles/sass/_mainStyling.scss
+++ b/styles/sass/_mainStyling.scss
@@ -196,13 +196,33 @@ main {
         top: -66px;
     }
 
+    a {
+        display: block;
+    }
+
+    .contactLinks, .row1, .row2 {
+        display: flex;
+    }
+
+    .row1, .row2 {
+        margin: 30px 0;
+    }
+
+    .contactLinks {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
     i {
         font-size: 10rem;
-        margin-right: 40px;
+        margin: 0 35px;
         transition: color 0.3s;
     }
     i:hover {
         color: darken($orange, 10%);
+    }
+    .fa-github {
+        margin-right: 26px;
     }
 }
 
