--- a/styles/style.css
+++ b/styles/style.css
@@ -492,14 +492,35 @@ main {
   position: relative;
   top: -66px;
 }
+.contact a {
+  display: block;
+}
+.contact .contactLinks, .contact .row1, .contact .row2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.contact .row1, .contact .row2 {
+  margin: 30px 0;
+}
+.contact .contactLinks {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
 .contact i {
   font-size: 10rem;
-  margin-right: 40px;
+  margin: 0 35px;
   -webkit-transition: color 0.3s;
   transition: color 0.3s;
 }
 .contact i:hover {
   color: #ff5826;
+}
+.contact .fa-github {
+  margin-right: 26px;
 }
 
 footer p {
@@ -582,5 +603,65 @@ footer p {
   }
   .projects .overflow1 {
     display: none;
+  }
+}
+@media (max-width: 320px) {
+  p {
+    font-size: 2rem;
+  }
+
+  header {
+    margin-top: 110px;
+  }
+  header h1 {
+    font-size: 7rem;
+    line-height: 8rem;
+  }
+  header h2 {
+    font-size: 3rem;
+  }
+  header .item1 {
+    width: 280px;
+    height: 153px;
+  }
+  header .item3 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  main {
+    margin-top: -565px;
+  }
+  main h2 {
+    font-size: 7rem;
+    line-height: 8rem;
+  }
+
+  .aboutMe p {
+    padding: 35px 0 35px 23px;
+  }
+  .aboutMe .shapeContainer {
+    margin-top: -40px;
+  }
+
+  .projects h3 {
+    font-size: 7rem;
+    line-height: 8rem;
+  }
+  .projects .projectDescription {
+    margin-left: 0;
+  }
+  .projects .imageContainer {
+    margin-bottom: 50px;
+  }
+  .projects article {
+    margin-bottom: 45px;
+  }
+  .projects .textContainer p {
+    margin-bottom: 25px;
+  }
+
+  .contact h2 {
+    top: -40px;
   }
 }
